// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollSyncTable should handle rendering when there are not columns neither rows 1`] = `
<div
  className=""
  style={
    Object {
      "height": "auto",
      "width": "100%",
    }
  }
>
  <ScrollSyncBody
    columnClassName=""
    columns={Array []}
    headerClassName=""
    headerColumnClassName=""
    rowClassName=""
    rows={Array []}
    stickHeader={false}
  />
</div>
`;

exports[`ScrollSyncTable should pass the prop stickHeader to the table body 1`] = `
<div
  className=""
  style={
    Object {
      "height": "auto",
      "width": "100%",
    }
  }
>
  <ScrollSyncBody
    columnClassName=""
    columns={Array []}
    headerClassName=""
    headerColumnClassName=""
    rowClassName=""
    rows={Array []}
    stickHeader={true}
  />
</div>
`;

exports[`ScrollSyncTable should render the given columns and rows 1`] = `
<div
  className=""
  style={
    Object {
      "height": "auto",
      "width": "100%",
    }
  }
>
  <ScrollSyncBody
    columnClassName=""
    columns={
      Array [
        <ScrollSyncColumn
          className=""
          name="a"
          width="150px"
        >
          A
        </ScrollSyncColumn>,
      ]
    }
    headerClassName=""
    headerColumnClassName=""
    rowClassName=""
    rows={
      Array [
        <ScrollSyncRow
          className=""
        >
          <ScrollSyncCell
            column="a"
          >
            A / A
          </ScrollSyncCell>
        </ScrollSyncRow>,
      ]
    }
    stickHeader={false}
  />
</div>
`;

exports[`ScrollSyncTable should render with default props 1`] = `
<div
  className=""
  style={
    Object {
      "height": "auto",
      "width": "100%",
    }
  }
>
  <ScrollSyncBody
    columnClassName=""
    columns={Array []}
    headerClassName=""
    headerColumnClassName=""
    rowClassName=""
    rows={Array []}
    stickHeader={false}
  />
</div>
`;

exports[`ScrollSyncTable should render with the given class names 1`] = `
<div
  className="table-class-name"
  style={
    Object {
      "height": "auto",
      "width": "100%",
    }
  }
>
  <ScrollSyncBody
    columnClassName="column-class-name"
    columns={Array []}
    headerClassName="header-class-name"
    headerColumnClassName="header-column-class-name"
    rowClassName="row-class-name"
    rows={Array []}
    stickHeader={false}
  />
</div>
`;
